tuidom-macros/tests/ui/unknown_side.stderr
error: `middle` is not an edge — expected `all`, `none`, or any of `top`, `right`, `bottom`, `left`
 --> tests/ui/unknown_side.rs:5:31
  |
5 |         half_block_edges: top middle,
  |                               ^^^^^^
