tuidom-macros/tests/ui/unknown_side.rs
use tuidom_macros::style;

fn main() {
    let _ = style! {
        half_block_edges: top middle,
    };
}
